simplf/parser/simplfParser.java
// Generated from simplf.g4 by ANTLR 4.13.2

    package simplf.parser;
    import simplf.Stmt;
    import simplf.Stmt.*;

    import simplf.Expr;
    import simplf.Expr.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class simplfParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LEFT_PAREN=1, RIGHT_PAREN=2, LEFT_BRACE=3, RIGHT_BRACE=4, COMMA=5, DOT=6, 
		MINUS=7, PLUS=8, SEMICOLON=9, STAR=10, SLASH=11, BANG=12, BANG_EQUAL=13, 
		EQUAL=14, EQUAL_EQUAL=15, GREATER=16, GREATER_EQUAL=17, LESS=18, LESS_EQUAL=19, 
		AND=20, CLASS=21, ELSE=22, FALSE=23, FOR=24, FUN=25, IF=26, NIL=27, OR=28, 
		PRINT=29, SUPER=30, THIS=31, TRUE=32, VAR=33, WHILE=34, IDENTIFIER=35, 
		STRINGLIT=36, NUMBER=37, COMMENT=38, WHITESPACE=39;
	public static final int
		RULE_program = 0, RULE_declaration = 1, RULE_funDecl = 2, RULE_params = 3, 
		RULE_varDecl = 4, RULE_statement = 5, RULE_block = 6, RULE_ifStatement = 7, 
		RULE_whileStatement = 8, RULE_forStatement = 9, RULE_exprStatement = 10, 
		RULE_printStatement = 11, RULE_arguments = 12, RULE_expression = 13, RULE_literal = 14, 
		RULE_id = 15, RULE_or = 16, RULE_and = 17, RULE_equal = 18, RULE_bang_equal = 19, 
		RULE_equal_equal = 20, RULE_greater = 21, RULE_greater_equal = 22, RULE_less = 23, 
		RULE_less_equal = 24, RULE_plus = 25, RULE_minus = 26, RULE_slash = 27, 
		RULE_star = 28, RULE_bang = 29, RULE_rparen = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declaration", "funDecl", "params", "varDecl", "statement", 
			"block", "ifStatement", "whileStatement", "forStatement", "exprStatement", 
			"printStatement", "arguments", "expression", "literal", "id", "or", "and", 
			"equal", "bang_equal", "equal_equal", "greater", "greater_equal", "less", 
			"less_equal", "plus", "minus", "slash", "star", "bang", "rparen"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "','", "'.'", "'-'", "'+'", "';'", 
			"'*'", "'/'", "'!'", "'!='", "'='", "'=='", "'>'", "'>='", "'<'", "'<='", 
			"'and'", "'class'", "'else'", "'false'", "'for'", "'fun'", "'if'", "'nil'", 
			"'or'", "'print'", "'super'", "'this'", "'true'", "'var'", "'while'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACE", "RIGHT_BRACE", "COMMA", 
			"DOT", "MINUS", "PLUS", "SEMICOLON", "STAR", "SLASH", "BANG", "BANG_EQUAL", 
			"EQUAL", "EQUAL_EQUAL", "GREATER", "GREATER_EQUAL", "LESS", "LESS_EQUAL", 
			"AND", "CLASS", "ELSE", "FALSE", "FOR", "FUN", "IF", "NIL", "OR", "PRINT", 
			"SUPER", "THIS", "TRUE", "VAR", "WHILE", "IDENTIFIER", "STRINGLIT", "NUMBER", 
			"COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "simplf.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public simplfParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<Stmt> val = new ArrayList<>();;
		public DeclarationContext declaration;
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 271379861642L) != 0)) {
				{
				{
				setState(62);
				((ProgramContext)_localctx).declaration = declaration();
				_localctx.val.add(((ProgramContext)_localctx).declaration.val);
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public Stmt val;
		public FunDeclContext funDecl;
		public VarDeclContext varDecl;
		public StatementContext statement;
		public FunDeclContext funDecl() {
			return getRuleContext(FunDeclContext.class,0);
		}
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUN:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				((DeclarationContext)_localctx).funDecl = funDecl();
				((DeclarationContext)_localctx).val =  ((DeclarationContext)_localctx).funDecl.val;
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				((DeclarationContext)_localctx).varDecl = varDecl();
				((DeclarationContext)_localctx).val =  ((DeclarationContext)_localctx).varDecl.val;
				}
				break;
			case LEFT_PAREN:
			case LEFT_BRACE:
			case MINUS:
			case BANG:
			case FALSE:
			case FOR:
			case IF:
			case NIL:
			case PRINT:
			case TRUE:
			case WHILE:
			case IDENTIFIER:
			case STRINGLIT:
			case NUMBER:
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				((DeclarationContext)_localctx).statement = statement();
				((DeclarationContext)_localctx).val =  ((DeclarationContext)_localctx).statement.val;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunDeclContext extends ParserRuleContext {
		public Stmt val;
		public IdContext id;
		public BlockContext block;
		public ParamsContext params;
		public TerminalNode FUN() { return getToken(simplfParser.FUN, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode LEFT_PAREN() { return getToken(simplfParser.LEFT_PAREN, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(simplfParser.RIGHT_PAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public FunDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDecl; }
	}

	public final FunDeclContext funDecl() throws RecognitionException {
		FunDeclContext _localctx = new FunDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funDecl);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				match(FUN);
				setState(82);
				((FunDeclContext)_localctx).id = id();
				setState(83);
				match(LEFT_PAREN);
				setState(84);
				match(RIGHT_PAREN);
				setState(85);
				((FunDeclContext)_localctx).block = block();
				((FunDeclContext)_localctx).val =  new Stmt.Function(((FunDeclContext)_localctx).id.val, new ArrayList<>(), ((FunDeclContext)_localctx).block.val);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				match(FUN);
				setState(89);
				((FunDeclContext)_localctx).id = id();
				setState(90);
				match(LEFT_PAREN);
				setState(91);
				((FunDeclContext)_localctx).params = params();
				setState(92);
				match(RIGHT_PAREN);
				setState(93);
				((FunDeclContext)_localctx).block = block();
				((FunDeclContext)_localctx).val =  new Stmt.Function(((FunDeclContext)_localctx).id.val, ((FunDeclContext)_localctx).params.val, ((FunDeclContext)_localctx).block.val);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsContext extends ParserRuleContext {
		public List<simplf.Token> val = new ArrayList<>();;
		public IdContext id1;
		public IdContext idi;
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(simplfParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(simplfParser.COMMA, i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			((ParamsContext)_localctx).id1 = id();
			_localctx.val.add(((ParamsContext)_localctx).id1.val);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(100);
				match(COMMA);
				setState(101);
				((ParamsContext)_localctx).idi = id();
				_localctx.val.add(((ParamsContext)_localctx).idi.val);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclContext extends ParserRuleContext {
		public Stmt val;
		public IdContext id;
		public ExpressionContext expression;
		public TerminalNode VAR() { return getToken(simplfParser.VAR, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(simplfParser.SEMICOLON, 0); }
		public TerminalNode EQUAL() { return getToken(simplfParser.EQUAL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDecl);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				match(VAR);
				setState(110);
				((VarDeclContext)_localctx).id = id();
				setState(111);
				match(SEMICOLON);
				((VarDeclContext)_localctx).val =  new Stmt.Var(((VarDeclContext)_localctx).id.val, null);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				match(VAR);
				setState(115);
				((VarDeclContext)_localctx).id = id();
				setState(116);
				match(EQUAL);
				setState(117);
				((VarDeclContext)_localctx).expression = expression(0);
				setState(118);
				match(SEMICOLON);
				((VarDeclContext)_localctx).val =  new Stmt.Var(((VarDeclContext)_localctx).id.val, ((VarDeclContext)_localctx).expression.val);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Stmt val;
		public ExprStatementContext exprStatement;
		public IfStatementContext ifStatement;
		public PrintStatementContext printStatement;
		public WhileStatementContext whileStatement;
		public ForStatementContext forStatement;
		public BlockContext block;
		public ExprStatementContext exprStatement() {
			return getRuleContext(ExprStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEFT_PAREN:
			case MINUS:
			case BANG:
			case FALSE:
			case NIL:
			case TRUE:
			case IDENTIFIER:
			case STRINGLIT:
			case NUMBER:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				((StatementContext)_localctx).exprStatement = exprStatement();
				((StatementContext)_localctx).val =  ((StatementContext)_localctx).exprStatement.val;
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				((StatementContext)_localctx).ifStatement = ifStatement();
				((StatementContext)_localctx).val =  ((StatementContext)_localctx).ifStatement.val;
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 3);
				{
				setState(129);
				((StatementContext)_localctx).printStatement = printStatement();
				((StatementContext)_localctx).val =  ((StatementContext)_localctx).printStatement.val;
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 4);
				{
				setState(132);
				((StatementContext)_localctx).whileStatement = whileStatement();
				((StatementContext)_localctx).val =  ((StatementContext)_localctx).whileStatement.val;
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 5);
				{
				setState(135);
				((StatementContext)_localctx).forStatement = forStatement();
				((StatementContext)_localctx).val =  ((StatementContext)_localctx).forStatement.val;
				}
				break;
			case LEFT_BRACE:
				enterOuterAlt(_localctx, 6);
				{
				setState(138);
				((StatementContext)_localctx).block = block();
				((StatementContext)_localctx).val =  new Stmt.Block(((StatementContext)_localctx).block.val);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public List<Stmt> val;
		public ProgramContext program;
		public TerminalNode LEFT_BRACE() { return getToken(simplfParser.LEFT_BRACE, 0); }
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode RIGHT_BRACE() { return getToken(simplfParser.RIGHT_BRACE, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(LEFT_BRACE);
			setState(144);
			((BlockContext)_localctx).program = program();
			setState(145);
			match(RIGHT_BRACE);
			((BlockContext)_localctx).val =  ((BlockContext)_localctx).program.val;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfStatementContext extends ParserRuleContext {
		public Stmt val;
		public ExpressionContext expression;
		public StatementContext statement;
		public StatementContext s1;
		public StatementContext s2;
		public TerminalNode IF() { return getToken(simplfParser.IF, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(simplfParser.LEFT_PAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(simplfParser.RIGHT_PAREN, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(simplfParser.ELSE, 0); }
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ifStatement);
		try {
			setState(164);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				match(IF);
				setState(149);
				match(LEFT_PAREN);
				setState(150);
				((IfStatementContext)_localctx).expression = expression(0);
				setState(151);
				match(RIGHT_PAREN);
				setState(152);
				((IfStatementContext)_localctx).statement = statement();
				((IfStatementContext)_localctx).val =  new Stmt.If(((IfStatementContext)_localctx).expression.val, ((IfStatementContext)_localctx).statement.val, null);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				match(IF);
				setState(156);
				match(LEFT_PAREN);
				setState(157);
				((IfStatementContext)_localctx).expression = expression(0);
				setState(158);
				match(RIGHT_PAREN);
				setState(159);
				((IfStatementContext)_localctx).s1 = statement();
				setState(160);
				match(ELSE);
				setState(161);
				((IfStatementContext)_localctx).s2 = statement();
				((IfStatementContext)_localctx).val =  new Stmt.If(((IfStatementContext)_localctx).expression.val, ((IfStatementContext)_localctx).s1.val, ((IfStatementContext)_localctx).s2.val);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileStatementContext extends ParserRuleContext {
		public Stmt val;
		public ExpressionContext expression;
		public StatementContext statement;
		public TerminalNode WHILE() { return getToken(simplfParser.WHILE, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(simplfParser.LEFT_PAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(simplfParser.RIGHT_PAREN, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public WhileStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStatement; }
	}

	public final WhileStatementContext whileStatement() throws RecognitionException {
		WhileStatementContext _localctx = new WhileStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_whileStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(WHILE);
			setState(167);
			match(LEFT_PAREN);
			setState(168);
			((WhileStatementContext)_localctx).expression = expression(0);
			setState(169);
			match(RIGHT_PAREN);
			setState(170);
			((WhileStatementContext)_localctx).statement = statement();

			    ((WhileStatementContext)_localctx).val =  new Stmt.While(((WhileStatementContext)_localctx).expression.val, ((WhileStatementContext)_localctx).statement.val);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
